# Colophon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RESEARCH.md  meson.build  org.virinvictus.Colophon.json  patchnotes.md  roadmap.md  spec.md
.github/workflows/: ci.yml
colophon/: Cargo.toml  build.rs
colophon-core/: Cargo.toml
colophon-core/src/: db.rs  lib.rs  model.rs  sidecar.rs
colophon-core/src/metrics/: completion.rs  days.rs  mod.rs  progress.rs  sessions.rs  speed.rs
colophon-core/tests/: live_sample.rs  perf.rs  stats_db.rs
colophon-core/tests/common/: mod.rs
colophon/data/: org.virinvictus.Colophon.gschema.xml
colophon/src/: autopull.rs  fmt.rs  library.rs  loader.rs  main.rs  paths.rs  settings.rs  stats.rs  theme-light.css  theme.css  theme.rs
colophon/src/charts/: bar.rs  heatmap.rs  hour_heatmap.rs  line.rs  mod.rs  page_activity.rs  span_bar.rs
colophon/src/ui/: actions.rs  book_page.rs  book_page.ui  book_row.rs  book_row.ui  clamp.rs  library_view.rs  library_view.ui  mod.rs  overview_page.rs  overview_page.ui  preferences.rs  rows.rs  shortcuts.rs  window.rs  window.ui
data/: org.virinvictus.Colophon.appdata.xml  org.virinvictus.Colophon.desktop  org.virinvictus.Colophon.gschema.xml
