[workspace]
members = ["colophon-core", "colophon"]
default-members = ["colophon"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["Brandon LaRocque"]

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "time"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_7"] }
