[workspace]
members = ["colophon-core", "colophon"]
default-members = ["colophon"]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2024"
license = "MIT"
authors = ["Brandon LaRocque"]

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "time"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
# Sandboxed Lua VM for reading KOReader's `.sdr` sidecars (a Lua table
# chunk). Vendored so it builds from source, like rusqlite's bundled sqlite.
mlua = { version = "0.10", features = ["lua54", "vendored"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
