[package]
name = "colophon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
mlua.workspace = true

[dev-dependencies]
# Already a normal dependency above; re-declared so integration tests can
# name a concrete TimeZone when exercising the tz-generic metric functions.
chrono.workspace = true
